codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_columns.snap
---
source: tui/src/app/agent_center_tests.rs
expression: "screen(&view, 160, 22)"
---
  Agent command center  Group: Project  g
   All 6   Needs you 2   Working 1   Ready 2   Inactive 1                                                                                      tab/⇧tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                                                                   Status         Updated  │ Task details
  /tmp/project  6                                                                                                     │
  › ○ Current task                                                                            Ready              now  │ Current task
    ○ A longer task title that uses the available column                              voice   Ready           5m ago  │ ○ Ready
    ! Failed task                                                                             Error           1h ago  │
    ● Needs an answer                                                                         Needs input     2h ago  │ Project
    ● Working task                                                                            Working         1d ago  │ /tmp/project
    ○ Unloaded task                                                                           Inactive        2d ago  │ Model: Unknown
                                                                                                                      │
                                                                                                                      │ Prompt
                                                                                                                      │ Current task
                                                                                                                      │
                                                                                                                      │
                                                                                                                      │
                                                                                                                      │
                                                                                                                      │
                                                                                                                      │
                                                                                                                      │
  ? help  esc back  ↑/↓ move  enter open  n new
