codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_navigation_and_complete_hints.snap
---
source: tui/src/app/agent_center_tests.rs
expression: "screen(&view, width, height)"
---
  Agent command center  Group: Projec…
   All 3   Needs you 1   Working 0   ›
  ────────────────────────────────────
  Task shortcuts

  Navigate
  ↑      Up
  ↓      Down
  enter  Open
  pgup   Page up
  pgdn   Page down
  ⌃c     Quit

  Tasks
  n          New
  w          New worktree
  o          Resume
  f          Fork
  r          Rename
  x          Stop
  a          Archive
  h          Hide
  … resize to see all
  esc back
